[gd_scene load_steps=6 format=3 uid="uid://cu5bml37ggq8c"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_0t8l7"]
[ext_resource type="Texture2D" uid="uid://drdpqdehmt2ru" path="res://Assets/titleimage.png" id="2_xeqdt"]
[ext_resource type="FontFile" uid="uid://3v73fhbabj22" path="res://Assets/Fonts/Fine Blackboard.ttf" id="3_qc2e1"]
[ext_resource type="Theme" uid="uid://dvnwmjqtsjco" path="res://Themes/UpgradeButtonTheme.tres" id="4_6ckig"]
[ext_resource type="PackedScene" uid="uid://nxexr13pfsqy" path="res://Scenes/UI/how_to_play.tscn" id="5_jm712"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0t8l7")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xeqdt")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_qc2e1")
theme_override_font_sizes/font_size = 65
text = "Forge me a Sword!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="PlayButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_right = NodePath("../HowToPlayButton")
theme = ExtResource("4_6ckig")
theme_override_fonts/font = ExtResource("3_qc2e1")
theme_override_font_sizes/font_size = 22

[node name="Play" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ckig")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlayButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../PlayButton")
theme = ExtResource("4_6ckig")
theme_override_fonts/font = ExtResource("3_qc2e1")
theme_override_font_sizes/font_size = 22
text = "
"

[node name="How to Play" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/HowToPlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ckig")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="How to Play" parent="." instance=ExtResource("5_jm712")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="closed" from="How to Play" to="." method="_on_how_to_play_closed"]
[connection signal="visibility_changed" from="How to Play" to="How to Play" method="_on_visibility_changed"]

[editable path="How to Play"]
